# NeonFC-SSL

./: .gitignore  DeveloperGuide.md  Dockerfile  README.md  STUFF.txt  config.json  config.toml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
neonfc_ssl/: cli.py  game.py  main.py  positioal_passing_vis.py
neonfc_ssl/algorithms/drunk_walk/: __init__.py  drunk_walk.py
neonfc_ssl/algorithms/fsm/: __init__.py  state.py
neonfc_ssl/algorithms/kalman_filter/: __init__.py  kalman_filter.py
neonfc_ssl/algorithms/potential_fields/: fields.py
neonfc_ssl/api/: __init__.py  interface_sender.py
neonfc_ssl/coach/: __init__.py  circle_coach.py  coach.py  hungarian_coach.py  simple_coach.py  test_coach.py
neonfc_ssl/comm/: grsim_comm.py  serial_comm.py
neonfc_ssl/commons/: func.py  math.py  velocities.py
neonfc_ssl/control/: __init__.py  control.py
neonfc_ssl/control_layer/: __init__.py  control.py  control_data.py
neonfc_ssl/control_layer/path_planning/: __init__.py  base_planner.py
neonfc_ssl/core/: __init__.py  debug_layer.py  layer.py
neonfc_ssl/core/event/: __init__.py  event_definitions.py  event_engine.py  (+3 more)
neonfc_ssl/decision_layer/: __init__.py  decision.py  decision_data.py  utils.py
neonfc_ssl/entities/: __init__.py  ball.py  field.py  robot.py  robot_command.py
neonfc_ssl/feedback/: read_feedback_info.py
neonfc_ssl/input_l/: __init__.py  input_data.py  input_layer.py
neonfc_ssl/input_layer/: __init__.py  input_data.py  input_layer.py
neonfc_ssl/logger/: __init__.py  custom_levels.py  filters.py  jsonl_formatter.py
neonfc_ssl/match/: __init__.py  match_data.py  ssl_match.py
neonfc_ssl/output_layer/: __init__.py  output_layer.py
neonfc_ssl/possession_tracker/: __init__.py  float_possession_tracker.py  possession_tracker.py
neonfc_ssl/protocols/: grSim_Packet_pb2.py  ssl_simulation_config_pb2.py  ssl_simulation_error_pb2.py  ssl_simulation_robot_feedback_pb2.py  ssl_simulation_synchronous_pb2.py  ssl_vision_wrapper_pb2.py
neonfc_ssl/referee/: ssl_game_controller.py
neonfc_ssl/skills/: __init__.py  base_skill.py  dribble.py  go_to_ball.py  move_to_pose.py  passing.py  self_pass.py  shoot.py  wait.py
neonfc_ssl/state_controller/: __init__.py  state_controller.py
neonfc_ssl/strategies/: __init__.py  ball_holder.py  base_strategy.py  follow_ball.py  follow_pose.py  goalkeeper.py  left_back.py  libero.py  passer.py  prepare_ballplacement.py  prepare_bh_penalty.py  prepare_gk_penalty.py  prepare_kickoff.py  prepare_penalty.py  receiver.py  right_back.py  still.py  test.py
neonfc_ssl/tracking_layer/: __init__.py  tracking.py  tracking_data.py
neonfc_ssl/vision/: auto_ref_vision.py  gr_sim_vision.py
tests/integ/: test_control.py  test_decision.py  test_planner.py  test_tracking.py
tests/unit/: test_planner.py  test_rrt.py
(+111 files in other folders)
