[tool.poetry]
name = "neonfc-ssl"
version = "0.2.0"
package-mode = false
description = "project neon's code for ssl decision making"
authors = [
    "Alexsandro Santos <alexsandro2134@gmail.com>",
    "Eduardo Makita <makitayukio1@gmail.com>",
    "Guilherme Torres <g.ctorres09@gmail.com>",
    "João Leal <jpkleal@gamil.com>",
    "Valentina Sierra <valentina.sierra.e@hotmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
protobuf = "3.20.x"
scipy = "^1.11.3"
numpy = "^1.26.0"
neonpathplanning = "^1.0.1"
matplotlib = "^3.9.2"
pyvisgraph = "^0.2.1"
tqdm = "^4.66.5"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
