[tool.poetry]
name = "neonfc_ssl"
version = "0.2.0"
#package-mode = false
description = "project neon's code for ssl decision making"
authors = [
    "Alexsandro Santos <alexsandro2134@gmail.com>",
    "Eduardo Makita <makitayukio1@gmail.com>",
    "Guilherme Torres <g.ctorres09@gmail.com>",
    "João Leal <jpkleal@gamil.com>",
    "Valentina Sierra <valentina.sierra.e@hotmail.com>"
]
readme = "README.md"

[tool.poetry.scripts]
neonfc = 'neonfc_ssl.main:main'

[tool.poetry.dependencies]
python = "3.12.x"
protobuf = "3.20.x"
scipy = "1.15"
numpy = "2.2"
neonpathplanning = "^1.0.1"
matplotlib = "3.10"
tqdm = "^4.66.5"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
