[tool.poetry]
name = "neonfc_ssl"
version = "0.2.0"
#package-mode = false
description = "project neon's code for ssl decision making"
authors = [
    "Alexsandro Santos <alexsandro2134@gmail.com>",
    "Eduardo Makita <makitayukio1@gmail.com>",
    "Guilherme Torres <g.ctorres09@gmail.com>",
    "João Leal <jpkleal@gamil.com>",
    "Valentina Sierra <valentina.sierra.e@hotmail.com>",
    "Diego Paschoal <diegopaschoal471@gmail.com>"
]
readme = "README.md"

[tool.poetry.scripts]
neonfc = 'neonfc_ssl.main:main'

[tool.poetry.dependencies]
python = "3.12.*"
protobuf = "3.20.*"
scipy = "1.15"
numpy = "2.2"
neonpathplanning = "^1.0.1"
matplotlib = "3.10"
tqdm = "^4.66.5"
pyserial = "^3.5"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.1"
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test",
    "unit: mark test as unit test"
]
filterwarnings = "ignore::DeprecationWarning"
testpaths = [
    "tests"
]

[tool.mypy]
[[tool.mypy.overrides]]
module = ["neonfc_ssl.protocols.*", "neonfc_ssl.path_planning.*"]
ignore_errors = true